# cordful

./: 404.html  README.md  convert.py  dodo.py  gen_pages.py  index.html  mkdocs.yml  models.md  pcdm.yaml  pyproject.toml  sitemap.xml
models/: index.html  models.yaml
models/bioschemas/: Beacon_v0.2-DRAFT-2018_04_23-DEPRECATED.yaml  ChemicalSubstance_v0.1-DRAFT-2018_12_07.yaml  ChemicalSubstance_v0.2-DRAFT-2019_06_11.yaml  ChemicalSubstance_v0.3-DRAFT-2019_11_11.yaml  ChemicalSubstance_v0.4-RELEASE.yaml  ComputationalTool_v0.5-DRAFT.yaml  ComputationalTool_v0.6-DRAFT.yaml  ComputationalTool_v1.0-RELEASE.yaml  ComputationalWorkflow_v0.2-DRAFT-2019_11_29.yaml  ComputationalWorkflow_v0.3-DRAFT-2020_03_03.yaml  ComputationalWorkflow_v0.4-DRAFT-2020_05_11.yaml  ComputationalWorkflow_v0.5-DRAFT-2020_07_21.yaml  ComputationalWorkflow_v1.0-RELEASE.yaml  ComputationalWorkflow_v1.1-DRAFT.yaml  CourseInstance_v0.3-DRAFT-2018_11_16.yaml  CourseInstance_v0.6-DRAFT-2019_06_06.yaml  CourseInstance_v0.7-DRAFT-2019_11_08.yaml  Course_v0.1-DRAFT-2018_04_25.yaml  Course_v0.1-DRAFT-2018_09_25.yaml  Course_v0.10-DRAFT.yaml  Course_v0.3-DRAFT-2018_11_16.yaml  Course_v0.5-DRAFT-2019_02_25.yaml  Course_v0.6-DRAFT-2019_06_06.yaml  Course_v0.7-DRAFT-2019_11_08.yaml  Course_v0.8-DRAFT-2020_10_06.yaml  Course_v0.9-DRAFT-2020_12_08.yaml  Course_v1.0-RELEASE.yaml  Course_v1.1-DRAFT.yaml  DataCatalog_v0.1-DRAFT-2018_04_25.yaml  DataCatalog_v0.2-RELEASE-2019_06_14.yaml  DataCatalog_v0.3-RELEASE-2019_07_01.yaml  DataRecord_v0.2-DRAFT-2019_06_14-DEPRECATED-profile.yaml  (+114 more)
specifications/: index.html
(+246 files in other folders)
