[project]
name = "RdfLinkmlLibrary"
version = "0.1.0"
description = "LinkML implementation of various linked data schemas, profiles vocabularies and ontologies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "doit>=0.36.0",
    "schema-automator>=0.5.2",
]

[tool.uv.sources]
# Note: currently using my fork due to https://github.com/linkml/schema-automator/pull/152
schema-automator = { git = "https://github.com/multimeric/schema-automator.git", branch = "refactor" }
