[project]
name = "cordful"
version = "0.1.0"
description = "Conversion Of RDF Unto LinkML"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "doit>=0.36.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-material>=9.5.49",
    "mkdocs-same-dir>=0.1.3",
    "schema-automator>=0.5.2",
]

[tool.uv.sources]
# Note: currently using my fork due to https://github.com/linkml/schema-automator/pull/152
schema-automator = { git = "https://github.com/multimeric/schema-automator.git", branch = "refactor" }
